stripe embed form init

--- a/views/index.html
+++ b/views/index.html
@@ -9,141 +9,15 @@
 	<body ng-cloak ng-app="hakaToRun">
 
 		<div ng-controller="mainController">
-    
-            <form id="payment-form" method="post" action="">
-                <fieldset>
 
-                <!-- Form Name -->
-                <legend>Billing Details</legend>
-
-                <!-- Street -->
-                <div class="form-group">
-                <label class="col-sm-4 control-label" for="textinput">Street</label>
-                <div class="col-sm-6">
-                  <input type="text" name="street" placeholder="Street" class="address form-control">
-                </div>
-                </div>
-
-                <!-- City -->
-                <div class="form-group">
-                <label class="col-sm-4 control-label" for="textinput">City</label>
-                <div class="col-sm-6">
-                  <input type="text" name="city" placeholder="City" class="city form-control">
-                </div>
-                </div>
-
-                <!-- State -->
-                <div class="form-group">
-                <label class="col-sm-4 control-label" for="textinput">State</label>
-                <div class="col-sm-6">
-                  <input type="text" name="state" maxlength="65" placeholder="State" class="state form-control">
-                </div>
-                </div>
-
-                <!-- Postcal Code -->
-                <div class="form-group">
-                <label class="col-sm-4 control-label" for="textinput">Postal Code</label>
-                <div class="col-sm-6">
-                  <input type="text" name="zip" maxlength="9" placeholder="Postal Code" class="zip form-control">
-                </div>
-                </div>
-
-                <!-- Country -->
-                <div class="form-group">
-                <label class="col-sm-4 control-label" for="textinput">Country</label>
-                <div class="col-sm-6"> 
-                  <!--input type="text" name="country" placeholder="Country" class="country form-control"-->
-                  <div class="country bfh-selectbox bfh-countries" name="country" placeholder="Select Country" data-flags="true" data-filter="true"> </div>
-                </div>
-                </div>
-
-                <!-- Email -->
-                <div class="form-group">
-                <label class="col-sm-4 control-label" for="textinput">Email</label>
-                <div class="col-sm-6">
-                  <input type="text" name="email" maxlength="65" placeholder="Email" class="email form-control">
-                </div>
-                </div>
-                </fieldset>
-                <fieldset>
-                <legend>Card Details</legend>
-
-                <!-- Card Holder Name -->
-                <div class="form-group">
-                  <label class="col-sm-4 control-label"  for="textinput">Card Holder's Name</label>
-                  <div class="col-sm-6">
-                    <input type="text" name="cardholdername" maxlength="70" placeholder="Card Holder Name" class="card-holder-name form-control">
-                  </div>
-                </div>
-
-                <!-- Card Number -->
-                <div class="form-group">
-                  <label class="col-sm-4 control-label" for="textinput">Card Number</label>
-                  <div class="col-sm-6">
-                    <input type="text" id="cardnumber" maxlength="19" placeholder="Card Number" class="card-number form-control">
-                  </div>
-                </div>
-
-                <!-- Expiry-->
-                <div class="form-group">
-                  <label class="col-sm-4 control-label" for="textinput">Card Expiry Date</label>
-                  <div class="col-sm-6">
-                    <div class="form-inline">
-                      <select name="select2" data-stripe="exp-month" class="card-expiry-month stripe-sensitive required form-control">
-                        <option value="01" selected="selected">01</option>
-                        <option value="02">02</option>
-                        <option value="03">03</option>
-                        <option value="04">04</option>
-                        <option value="05">05</option>
-                        <option value="06">06</option>
-                        <option value="07">07</option>
-                        <option value="08">08</option>
-                        <option value="09">09</option>
-                        <option value="10">10</option>
-                        <option value="11">11</option>
-                        <option value="12">12</option>
-                      </select>
-                      <span> / </span>
-                      <select name="select2" data-stripe="exp-year" class="card-expiry-year stripe-sensitive required form-control">
-                      </select>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- CVV -->
-                <div class="form-group">
-                  <label class="col-sm-4 control-label" for="textinput">CVV/CVV2</label>
-                  <div class="col-sm-3">
-                    <input type="text" id="cvv" placeholder="CVV" maxlength="4" class="card-cvc form-control">
-                  </div>
-                </div>
-
-                <!-- Important notice -->
-                <div class="form-group">
-                <div class="panel panel-success">
-                  <div class="panel-heading">
-                    <h3 class="panel-title">Important notice</h3>
-                  </div>
-                  <div class="panel-body">
-                    <p>Your card will be charged 30€ after submit.</p>
-                    <p>Your account statement will show the following booking text:
-                      XXXXXXX </p>
-                  </div>
-                </div>
-
-                <!-- Submit -->
-                <div class="control-group">
-                  <div class="controls">
-                    <center>
-                      <button class="btn btn-success" type="submit">Pay Now</button>
-                    </center>
-                  </div>
-                </div>
-                </fieldset>
+            <form action="inc/post-handler.php" method="post">
+                <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                data-key="<?php echo $stripe_public_test_pub_key; ?>"
+                data-description="Buy now"
+                data-amount="1"
+                data-locale="auto"></script>
             </form>
-
-            <div class="payment-errors"></div>
-
+    
         </div>
 
         <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
